--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
 <div style="text-align: center;"><br>
 <br>
 <iframe src="https://www.youtube.com/embed/frVtclKzC_I?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
-<br><br>
-<iframe src="http://store.steampowered.com/widget/722040/" frameborder="0" height="190" width="646"></iframe>
+<br>
+<br>
+<iframe src="https://store.steampowered.com/widget/722040/" frameborder="0" height="190" width="646"></iframe>
 <br>
 <table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
@@ -52,8 +53,8 @@
 Description</span><br>
 <br>
 Cargo Breach is an Intense VR Arcade Shooter with Unique Gesture based
-Weapon Mechanics.<br>
-You hunt down escaped creatures in dark atmospheric spaceship
+Weapon Mechanics. You hunt down escaped creatures in dark atmospheric
+spaceship
 corridors. All presented in stunning AAA graphics.<br>
 <br style="font-weight: bold; color: rgb(255, 102, 0);">
 <span style="font-weight: bold; color: rgb(255, 153, 0);">About
@@ -65,19 +66,19 @@ is Breached! </span><br>
 The Selene is transporting livestock from outer space back to earth for
 the Food conglomerate S Car Go.<br>
 Venture into the ship and eradicate all escaped creatures before the
-ship reaches earth.<br>
-Cargo Breach is a VR Horror Shooter where you explore dark corridors
-hunting down escaped creatures.<br>
-You wield The Modular a device that can rearrange it's buildup to form
-whatever you need based on how you hold the controllers. Now be a good employee of S Car Go and clean that ship.<br>
+ship reaches earth. Cargo Breach is a VR Horror Shooter where you
+explore dark corridors
+hunting down escaped creatures. You wield The Modular a device that can
+rearrange it's buildup to form
+whatever you need based on how you hold the controllers. Now be a good
+employee of S Car Go and clean that ship.<br>
 <br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Features:</span><br>
 <br>
 </small>
 <div style="margin-left: 40px;"><small>-
 Gesture based gun mechanics allow you to switch guns by aligning your
-controllers differently.</small><br>
-<small>For instance hold one behind the other to form the
+controllers differently.</small><small> For instance hold one behind the other to form the
 "Shocker".</small><br>
 <br>
 <small>- Various weapon types that each have a different
