--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
 <iframe src="https://www.youtube.com/embed/frVtclKzC_I?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
 <br>
 <br>
-<iframe src="https://store.steampowered.com/widget/722040/" frameborder="0" height="190" width="646"></iframe>
-<br>
 <table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
@@ -78,7 +76,8 @@ employee of S Car Go and clean that ship.<br>
 </small>
 <div style="margin-left: 40px;"><small>-
 Gesture based gun mechanics allow you to switch guns by aligning your
-controllers differently.</small><small> For instance hold one behind the other to form the
+controllers differently.</small><small> For instance hold
+one behind the other to form the
 "Shocker".</small><br>
 <br>
 <small>- Various weapon types that each have a different
