--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ Rating</span><br>
 <br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">VR
 Support</span><br><br>
-<img style="width: 123px; height: 32px;" alt="VIVE" src="vive_studios_icon.png"> &nbsp; &nbsp; &nbsp;<img style="width: 148px; height: 32px;" alt="Oculus" src="Oculus-Rift.png"> &nbsp; &nbsp;<img style="width: 127px; height: 32px;" alt="Steam VR" src="Steam-VR-logo.png"><br><br>
+<img style="width: 126px; height: 32px;" alt="VIVE" src="vive_studios_icon.png"> &nbsp; &nbsp; &nbsp;<img style="width: 148px; height: 32px;" alt="Oculus" src="Oculus-Rift.png">&nbsp; &nbsp; &nbsp;<img style="width: 127px; height: 32px;" alt="Steam VR" src="Steam-VR-logo.png"><br><br>
 play area: Roomscale<br>
 <br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Tech
