--- a/index.html
+++ b/index.html
@@ -23,13 +23,14 @@
 <meta name="msapplication-square70x70logo" content="mstile-70x70.png">
 <meta name="msapplication-square150x150logo" content="mstile-150x150.png">
 <meta name="msapplication-wide310x150logo" content="mstile-310x150.png">
-<meta name="msapplication-square310x310logo" content="mstile-310x310.png"></head>
+<meta name="msapplication-square310x310logo" content="mstile-310x310.png">
+</head>
 <body style="background-repeat: no-repeat; background-attachment: fixed; color: white; background-color: rgb(0, 0, 0); background-image: url(Background.jpg);" alink="#ffcc33" link="#ff9900" vlink="#cc9933">
 <div style="text-align: right;"><br>
 <table style="width: 70%; height: 59px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td style="vertical-align: top; text-align: left;"><small><a href="https://www.facebook.com/N028Games/"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="facebook" title="facebook" src="fb.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="youTube" title="youTube" src="YT.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="mailto:info@no28.games"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="mail" title="mail" src="Mail.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="about.html"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="about" title="about" src="About.png"></a><span style="font-weight: bold;">
+<td style="vertical-align: top; text-align: left;"><small><a href="https://www.facebook.com/N028Games/" target="_blank"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="facebook" title="facebook" src="fb.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="youTube" title="youTube" src="YT.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="mailto:info@no28.games"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="mail" title="mail" src="Mail.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="about.html"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="about" title="about" src="About.png"></a><span style="font-weight: bold;">
 &nbsp;</span></small><br>
 <br>
 </td>
@@ -41,7 +42,10 @@
 <div style="text-align: center;"><br>
 <br>
 <iframe src="https://www.youtube.com/embed/frVtclKzC_I?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
-<br><br><a href="http://store.steampowered.com/app/722040/Cargo_Breach/"><img onmouseover="document.BUY.src='buyButtonHoover.png'" onmouseup="document.BUY.src='buyButton.png'" onmouseout="document.BUY.src='buyButton.png'" style="border: 0px solid ; width: 369px; height: 62px;" name="BUY" alt="Buy Now on Steam" src="buyButton.png"></a><br><br>
+<br>
+<br>
+<a href="http://store.steampowered.com/app/722040/Cargo_Breach/"><img onmouseover="document.BUY.src='buyButtonHoover.png'" onmouseup="document.BUY.src='buyButton.png'" onmouseout="document.BUY.src='buyButton.png'" style="border: 0px solid ; width: 369px; height: 62px;" name="BUY" alt="Buy Now on Steam" src="buyButton.png"></a><br>
+<br>
 <table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
@@ -99,11 +103,16 @@ graphics. </small><br>
 <small><br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Content
 Rating</span><br>
-<br><img style="width: 32px; height: 39px;" alt="Pegi" src="PEGI_18.png">&nbsp;<br><span style="font-weight: bold;">Pegi 18</span><br>Gore and Violence<br>
+<br>
+<img style="width: 32px; height: 39px;" alt="Pegi" src="PEGI_18.png">&nbsp;<br>
+<span style="font-weight: bold;">Pegi 18</span><br>
+Gore and Violence<br>
 <br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">VR
-Support</span><br><br>
-<img style="width: 126px; height: 32px;" alt="VIVE" src="vive_studios_icon.png"> &nbsp; &nbsp; &nbsp;<img style="width: 148px; height: 32px;" alt="Oculus" src="Oculus-Rift.png">&nbsp; &nbsp; &nbsp;<img style="width: 127px; height: 32px;" alt="Steam VR" src="Steam-VR-logo.png"><br><br>
+Support</span><br>
+<br>
+<img style="width: 126px; height: 32px;" alt="VIVE" src="vive_studios_icon.png"> &nbsp; &nbsp; &nbsp;<img style="width: 148px; height: 32px;" alt="Oculus" src="Oculus-Rift.png">&nbsp; &nbsp; &nbsp;<img style="width: 127px; height: 32px;" alt="Steam VR" src="Steam-VR-logo.png"><br>
+<br>
 play area: Roomscale<br>
 <br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Tech
@@ -170,7 +179,8 @@ Additional Notes: VR Headset required, 2x USB 3.0 ports<br>
 <br>
 <img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%2012.png"><br>
 <br>
-<small>all right reserved No. 28 Games 2017</small><br><br>
+<small>all right reserved No. 28 Games 2017</small><br>
+<br>
 <img style="width: 101px; height: 44px;" alt="logo" src="No28.png"><br>
 <br>
 </div>
