--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
 <meta name="msapplication-square70x70logo" content="mstile-70x70.png">
 <meta name="msapplication-square150x150logo" content="mstile-150x150.png">
 <meta name="msapplication-wide310x150logo" content="mstile-310x150.png">
-<meta name="msapplication-square310x310logo" content="mstile-310x310.png">
-</head>
+<meta name="msapplication-square310x310logo" content="mstile-310x310.png"></head>
 <body style="background-repeat: no-repeat; background-attachment: fixed; color: white; background-color: rgb(0, 0, 0); background-image: url(Background.jpg);" alink="#ffcc33" link="#ff9900" vlink="#cc9933">
 <div style="text-align: right;"><br>
 <table style="width: 70%; height: 59px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
 <tbody>
 <tr>
-<td style="vertical-align: top; text-align: left;"><small><a href="https://www.facebook.com/N028Games/" target="_blank"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="facebook" title="facebook" src="fb.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="youTube" title="youTube" src="YT.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="mailto:info@no28.games"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="mail" title="mail" src="Mail.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="about.html"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="about" title="about" src="About.png"></a><span style="font-weight: bold;">
+<td style="vertical-align: top; text-align: left;"><small><a href="https://www.facebook.com/N028Games/" target="_blank"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="facebook" title="facebook" src="fb.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="youTube" title="youTube" src="YT.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="mailto:info@no28.games"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="mail" title="mail" src="Mail.png"></a><span style="font-weight: bold;">&nbsp;&nbsp;</span><a href="http://www.sakarigames.com/press"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="press" title="press" src="About.png"></a><span style="font-weight: bold;">
 &nbsp;</span></small><br>
 <br>
 </td>
