--- a/index.html
+++ b/index.html
@@ -75,28 +75,9 @@ employee of S Car Go and clean that ship.<br>
 <span style="font-weight: bold; color: rgb(255, 153, 0);">Features:</span><br>
 <br>
 </small>
-<div style="margin-left: 40px;"><small>-
-Gesture based gun mechanics allow you to switch guns by aligning your
-controllers differently.</small><small> For instance hold
-one behind the other to form the
-"Shocker".</small><br>
-<br>
-<small>- Various weapon types that each have a different
-impact on the threats. </small><br>
-<br>
-<small>- Randomized Level creation. Each</small><small>
-run will be
-different, Blasting numerous waves of creatures along the way.</small><br>
-<br>
-<small>- Several enemy types with each their unique attacks
-and vulnerabilities.</small><br>
-<br>
-<small>- Stunning state of the art, High-end Triple A+
-graphics. </small><br>
-<br>
-<small>- Discover how the story enfolds as you play.</small><br>
-<br>
-<small>- Features Steam achievements.</small><br>
+<div style="margin-left: 40px;"><small>- Gesture based gun mechanics
+allow you to switch guns by aligning your controllers differently. For
+instance hold one behind the other to form the "Shocker".<br><br>- Various weapon types that each have a different impact on the threats. <br><br>- Randomized Level creation. Each run will be different, Blasting numerous waves of creatures along&nbsp; the way.<br><br>- Amazing spatialized audio allows you to locate your enemies in the dark.<br><br>- Stunning state of the art, High-end Triple A+ graphics. </small><small></small><br>
 </div>
 <br>
 <small><br>
