--- a/index.html
+++ b/index.html
@@ -1,160 +1,198 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type"><title>No 28 Games</title>
-
-<link href="sakari.css" rel="stylesheet">
-<link rel="icon" type="image/png">
-<link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png">
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="apple-touch-icon-144x144.png">
-<link rel="apple-touch-icon-precomposed" sizes="60x60" href="apple-touch-icon-60x60.png">
-<link rel="apple-touch-icon-precomposed" sizes="120x120" href="apple-touch-icon-120x120.png">
-<link rel="apple-touch-icon-precomposed" sizes="76x76" href="apple-touch-icon-76x76.png">
-<link rel="apple-touch-icon-precomposed" sizes="152x152" href="apple-touch-icon-152x152.png">
-<link rel="icon" type="image/png" href="favicon-196x196.png" sizes="196x196">
-<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
-<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-<link rel="icon" type="image/png" href="favicon-128.png" sizes="128x128">
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>No28Games</title>
+  <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1" />
+  <link href="css/normalize.css" rel="stylesheet" />
+  <link href="css/styles.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  
+  <link rel="icon" type="image/png">
+<link rel="apple-touch-icon-precomposed" sizes="57x57" href="icon/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="icon/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="icon/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="icon/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon-precomposed" sizes="60x60" href="icon/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="icon/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="icon/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="icon/apple-touch-icon-152x152.png">
+<link rel="icon" type="image/png" href="icon/favicon-196x196.png" sizes="196x196">
+<link rel="icon" type="image/png" href="icon/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="icon/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="icon/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="icon/favicon-128.png" sizes="128x128">
 <meta name="application-name" content="&nbsp;">
 <meta name="msapplication-TileColor" content="#FFFFFF">
-<meta name="msapplication-TileImage" content="mstile-144x144.png">
-<meta name="msapplication-square70x70logo" content="mstile-70x70.png">
-<meta name="msapplication-square150x150logo" content="mstile-150x150.png">
-<meta name="msapplication-wide310x150logo" content="mstile-310x150.png">
-<meta name="msapplication-square310x310logo" content="mstile-310x310.png"></head>
-<body style="background-repeat: no-repeat; background-attachment: fixed; color: white; background-color: rgb(0, 0, 0); background-image: url(Background.jpg);" alink="#ffcc33" link="#ff9900" vlink="#cc9933">
-<div style="text-align: right;"><br>
-<table style="width: 70%; height: 59px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top; text-align: left;"><small><a href="https://www.facebook.com/N028Games/" target="_blank"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="facebook" title="facebook" src="fb.png" align="middle"></a><span style="font-weight: bold;"> <a href="https://www.facebook.com/N028Games/" target="_blank">facebook</a>&nbsp; </span><a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="youTube" title="youTube" src="YT.png" align="middle"></a><span style="font-weight: bold;"> <a href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw" target="_blank">youtube</a>&nbsp; </span><a href="mailto:info@no28.games"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="mail" title="mail" src="Mail.png" align="middle"></a><span style="font-weight: bold;"> <a href="mailto:info@no28.games">contact</a>&nbsp; </span><a href="http://www.sakarigames.com/press"><img style="border: 0px solid ; width: 32px; height: 32px;" alt="press" title="press" src="About.png" align="middle"></a><span style="font-weight: bold;"> <a href="http://www.sakarigames.com/press" target="_top">press</a>
-&nbsp;</span></small><br>
-<br>
-</td>
-<td style="text-align: right; vertical-align: top;"><img style="width: 101px; height: 44px;" alt="logo" src="No28.png"><br>
-</td>
-</tr>
-</tbody>
-</table>
-<div style="text-align: center;"><br>
-<br>
-<iframe src="https://www.youtube.com/embed/frVtclKzC_I?rel=0&amp;controls=0&amp;showinfo=0" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
-<br>
-<br>
-<a href="http://store.steampowered.com/app/722040/Cargo_Breach/"><img onmouseover="document.BUY.src='buyButtonHoover.png'" onmouseup="document.BUY.src='buyButton.png'" onmouseout="document.BUY.src='buyButton.png'" style="border: 0px solid ; width: 369px; height: 62px;" name="BUY" alt="Buy Now on Steam" src="buyButton.png"></a><br>
-<br>
-<table style="text-align: left; margin-left: auto; margin-right: auto; width: 70%;" border="0" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td><small><span style="font-weight: bold; color: rgb(255, 153, 0);">Short
-Description</span><br>
-<br>
-Cargo Breach is an Intense VR Arcade Shooter with Unique Gesture based
-Weapon Mechanics. You hunt down escaped creatures in dark atmospheric
-spaceship
-corridors. All presented in stunning AAA graphics.<br>
-<br style="font-weight: bold; color: rgb(255, 102, 0);">
-<span style="font-weight: bold; color: rgb(255, 153, 0);">About
-The Game</span><br>
-</small><br>
-<small><span style="font-weight: bold; color: white;">Cargo
-is Breached! </span><br>
-<br>
-The Selene is transporting livestock from outer space back to earth for
-the Food conglomerate S Car Go.<br>
-Venture into the ship and eradicate all escaped creatures before the
-ship reaches earth. Cargo Breach is a VR Horror Shooter where you
-explore dark corridors
-hunting down escaped creatures. You wield The Modular a device that can
-rearrange it's buildup to form
-whatever you need based on how you hold the controllers. Now be a good
-employee of S Car Go and clean that ship.<br>
-<br>
-<span style="font-weight: bold; color: rgb(255, 153, 0);">Features:</span><br>
-<br>
-</small>
-<div style="margin-left: 40px;"><small>- Gesture based gun mechanics
-allow you to switch guns by aligning your controllers differently. For
-instance hold one behind the other to form the "Shocker".<br><br>- Various weapon types that each have a different impact on the threats. <br><br>- Randomized Level creation. Each run will be different, Blasting numerous waves of creatures along&nbsp; the way.<br><br>- Amazing spatialized audio allows you to locate your enemies in the dark.<br><br>- Stunning state of the art, High-end Triple A+ graphics. </small><small></small><br>
+<meta name="msapplication-TileImage" content="icon/mstile-144x144.png">
+<meta name="msapplication-square70x70logo" content="icon/mstile-70x70.png">
+<meta name="msapplication-square150x150logo" content="icon/mstile-150x150.png">
+<meta name="msapplication-wide310x150logo" content="icon/mstile-310x150.png">
+<meta name="msapplication-square310x310logo" content="icon/mstile-310x310.png"></head>
+</head>
+<body>
+
+<div id="navbar">
+		<a href="#home">Home</a>
+		<a href="#news">News</a>
+		<a href="#contact">Contact</a>
 </div>
-<br>
-<small><br>
-<span style="font-weight: bold; color: rgb(255, 153, 0);">Content
-Rating</span><br>
-<br>
-<img style="width: 32px; height: 39px;" alt="Pegi" src="PEGI_18.png">&nbsp;<br>
-<span style="font-weight: bold;">Pegi 18</span><br>
-Gore and Violence<br>
-<br>
-<span style="font-weight: bold; color: rgb(255, 153, 0);">VR
-Support</span><br>
-<br>
-<img style="width: 126px; height: 32px;" alt="VIVE" src="vive_studios_icon.png"> &nbsp; &nbsp; &nbsp;<img style="width: 148px; height: 32px;" alt="Oculus" src="Oculus-Rift.png">&nbsp; &nbsp; &nbsp;<img style="width: 127px; height: 32px;" alt="Steam VR" src="Steam-VR-logo.png"><br>
-<br>
-play area: Roomscale<br>
-<br>
-<span style="font-weight: bold; color: rgb(255, 153, 0);">Tech
-specs</span></small></td>
-</tr>
-</tbody>
+
+  <main>
+    <div id="video-wrap" class="video-wrap">
+    <div class="content-overlay">
+    <h1></h1>
+    </div>
+      <video preload="metadata" autoplay loop id="my-video">
+        <source src="videos/backgroundvid.mp4" type="video/mp4">
+        <source src="videos/mov_bbb.ogg" type="video/ogg">
+      </video>
+    </div>
+		<div class="thinline">
+	</div>
+<table
+ style="width: 60%; height: 200px; text-align: left; margin-left: auto; margin-right: auto;"
+ border="0" cellpadding="0" cellspacing="0">
+  <tbody>
+    <tr>
+      <td>
+	  <br>
+<table
+ style="width: 60%; height: 200px; text-align: left; margin-left: auto; margin-right: auto;"
+ border="0" cellpadding="0" cellspacing="0">
+  <tbody>
+    <tr>
+      <td>
+      <table
+      <table
+ style="width: 700px; height: 117px; text-align: left; margin-left: auto; margin-right: auto;"
+ border="0" cellpadding="0" cellspacing="15">
+        <tbody>
+          <tr>
+            <td style="width: 20%; vertical-align: top;"><img
+ style="width: 200px; height: 109px;" alt="GameLogo"
+ src="file:///C:/Users/SakariGames/Desktop/LandingPage/images/IntroLogo.png"></td>
+            <td
+ style="vertical-align: top; color: rgb(253, 253, 253);"><span
+ style="font-family: Verdana; font-size: 13.3333px; font-style: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(0, 0, 0); display: inline ! important; float: none;">Cargo
+Breach is an Intense VR Arcade Shooter with Unique Gesture based Weapon
+Mechanics. You hunt down escaped creatures in dark atmospheric
+spaceship corridors. All presented in stunning AAA graphics.</span></td>
+          </tr>
+        </tbody>
+      </table>
+      </td>
+    </tr>
+    <tr>
+      <td style="text-align: center;"><span
+ style="font-family: Verdana; font-size: 13.3333px; font-style: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(0, 0, 0); display: inline ! important; float: none; color: white;">Cargo
+Breach is the debut title title of No 28 Games. And harnases the power
+of these great brands. </span><br><br>
+      <img style="width: 715px; height: 52px;" alt="brands"
+ src="file:///C:/Users/SakariGames/Desktop/LandingPage/images/brands.png"></td>
+    </tr>
+  </tbody>
 </table>
 <br>
-<table style="width: 70%; height: 1px; text-align: left; margin-left: auto; margin-right: auto;" border="0" cellpadding="2" cellspacing="2">
-<tbody>
-<tr>
-<td style="vertical-align: top;"><small>MINIMUM:<br>
-OS: Windows 7 - 64 bit<br>
-Processor: Intel i5-4590 equivalent or greater<br>
-Memory: 8 GB RAM<br>
-Graphics: NVIDIA GTX 970 / AMD equivalent or greater<br>
-DirectX: Version 11<br>
-Storage: 1500 MB available space<br>
-Sound Card: Integrated<br>
-Additional Notes: VR Headset required, 2x USB 3.0 ports</small></td>
-<td style="vertical-align: top;"><small>RECOMMENDED:<br>
-OS: Windows 10<br>
-Processor: Intel Core i7 6700K equivalent or greater<br>
-Memory: 16 GB RAM<br>
-Graphics: NVIDIA GTX 980 / AMD equivalent or greater<br>
-DirectX: Version 12<br>
-Storage: 1500 MB available space<br>
-Sound Card: Integrated<br>
-Additional Notes: VR Headset required, 2x USB 3.0 ports<br>
-<br>
-</small></td>
-</tr>
-</tbody>
-</table>
-<br>
-<br>
-<img style="width: 242px; height: 133px;" alt="downscaled" src="IntroLogo.png"><br>
-<br>
-<br>
-<br>
-<span style="font-weight: bold; color: rgb(255, 153, 0);">Screens</span><br>
-<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%201.png"><br>
-<br>
-<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%202.png"><br>
-<br>
-<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Ludor.png"><br>
-<br>
-<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%203.png"><br>
-<br>
-<br>
-<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%206.png"><br>
-<br>
-<br>
-<img style="width: 655px; height: 352px;" alt="Cargo Breach ScreenShot" src="Screens/Cargo%20Breach%20ScreenShot%2012.png"><br>
-<br>
-<small>all right reserved No. 28 Games 2017</small><br>
-<br>
-<img style="width: 101px; height: 44px;" alt="logo" src="No28.png"><br>
-<br>
+
+
+
+
+	    </div>
+		<div class="thinline">
+	</div>
+	
+	</div>
+<div class="slideshow-container">
+
+<div class="mySlides fade">
+  <img src="images/CargoBreachPromoScreen_1.jpg" style="width:100%">
+
+</div>
+
+<div class="mySlides fade">
+  <img src="images/CargoBreachPromoScreen_2.jpg" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <img src="images/CargoBreachPromoScreen_3.jpg" style="width:100%">
+</div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
 </div>
 <br>
-<br>
-<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span> 
+  <span class="dot" onclick="currentSlide(2)"></span> 
+  <span class="dot" onclick="currentSlide(3)"></span> 
 </div>
-</body></html>
+
+<script>
+
+<script type="text/javascript"
+</script></div>
+  </main>
+  <script src="http://code.jquery.com/jquery-3.1.0.slim.min.js"></script>
+  <script src="backgroundVideo.js"></script>
+  <script>
+    $(document).ready(function() {
+      $('#my-video').backgroundVideo();
+    });
+  </script><script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-36251023-1']);
+  _gaq.push(['_setDomainName', 'jqueryscript.net']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+  var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("mySlides");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}    
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";  
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";  
+  dots[slideIndex-1].className += " active";
+}
+// When the user scrolls down 20px from the top of the document, slide down the navbar
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+    if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+        document.getElementById("navbar").style.top = "0";
+    } else {
+        document.getElementById("navbar").style.top = "-50px";
+    }
+}
+
+</script>
+</body>
+</html>
