--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <tr>
             <td style="width: 20%; vertical-align: top;"><img
  style="width: 200px; height: 109px;" alt="GameLogo"
- src="file:///C:/Users/SakariGames/Desktop/LandingPage/images/IntroLogo.png"></td>
+ src="/images/IntroLogo.png"></td>
             <td
  style="vertical-align: top; color: rgb(253, 253, 253);"><span
  style="font-family: Verdana; font-size: 13.3333px; font-style: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(0, 0, 0); display: inline ! important; float: none;">Cargo
@@ -91,7 +91,7 @@ spaceship corridors. All presented in stunning AAA graphics.</span></td>
 Breach is the debut title title of No 28 Games. And harnases the power
 of these great brands. </span><br><br>
       <img style="width: 715px; height: 52px;" alt="brands"
- src="file:///C:/Users/SakariGames/Desktop/LandingPage/images/brands.png"></td>
+ src="/images/brands.png"></td>
     </tr>
   </tbody>
 </table>
