--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 <body>
 
 <div id="navbar">
-		<a href="#home">Home</a>
-		<a href="#news">News</a>
-		<a href="#contact">Contact</a>
+		<a href="http://store.steampowered.com/app/722040/Cargo_Breach/">BUY NOW</a>
 </div>
 
   <main>
@@ -52,6 +50,8 @@
     </div>
 		<div class="thinline">
 	</div>
+	
+	
 <table
  style="width: 60%; height: 200px; text-align: left; margin-left: auto; margin-right: auto;"
  border="0" cellpadding="0" cellspacing="0">
@@ -73,7 +73,7 @@
           <tr>
             <td style="width: 20%; vertical-align: top;"><img
  style="width: 200px; height: 109px;" alt="GameLogo"
- src="/images/IntroLogo.png"></td>
+ src="images/IntroLogo.png"></td>
             <td
  style="vertical-align: top; color: rgb(253, 253, 253);"><span
  style="font-family: Verdana; font-size: 13.3333px; font-style: normal; font-weight: normal; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; background-color: rgb(0, 0, 0); display: inline ! important; float: none;">Cargo
@@ -91,16 +91,12 @@ spaceship corridors. All presented in stunning AAA graphics.</span></td>
 Breach is the debut title title of No 28 Games. And harnases the power
 of these great brands. </span><br><br>
       <img style="width: 715px; height: 52px;" alt="brands"
- src="/images/brands.png"></td>
+ src="images/brands.png"></td>
     </tr>
   </tbody>
 </table>
 <br>
 
-
-
-
-	    </div>
 		<div class="thinline">
 	</div>
 	
@@ -120,6 +116,30 @@ of these great brands. </span><br><br>
   <img src="images/CargoBreachPromoScreen_3.jpg" style="width:100%">
 </div>
 
+<div class="mySlides fade">
+  <img src="images/CargoBreachPromoScreen_4.jpg" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <img src="images/CargoBreachPromoScreen_5.jpg" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <img src="images/CargoBreachPromoScreen_6.jpg" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <img src="images/CargoBreachPromoScreen_7.jpg" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <img src="images/CargoBreachPromoScreen_8.jpg" style="width:100%">
+</div>
+
+<div class="mySlides fade">
+  <img src="images/CargoBreachPromoScreen_9.jpg" style="width:100%">
+</div>
+
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 
@@ -130,7 +150,42 @@ of these great brands. </span><br><br>
   <span class="dot" onclick="currentSlide(1)"></span> 
   <span class="dot" onclick="currentSlide(2)"></span> 
   <span class="dot" onclick="currentSlide(3)"></span> 
+  <span class="dot" onclick="currentSlide(4)"></span>
+  <span class="dot" onclick="currentSlide(5)"></span>
+  <span class="dot" onclick="currentSlide(6)"></span>
+  <span class="dot" onclick="currentSlide(7)"></span>
+  <span class="dot" onclick="currentSlide(8)"></span>
+  <span class="dot" onclick="currentSlide(9)"></span>
 </div>
+<br>
+<br>
+<div style="text-align: center;"><small><small><small><br>
+<big><big><span style="color: white;">FOLOW US
+ON</span></big></big></small></small></small><br>
+<br>
+<a href="https://www.facebook.com/N028Games/"><img
+ style="border: 0px solid ; width: 32px; height: 32px;"
+ alt="Facebook" title="Facebook" src="images/fb.png"></a>
+&nbsp; <a
+ href="https://www.youtube.com/channel/UCwa6YO3OqOlxyFuCtCuqelw"><img
+ style="border: 0px solid ; width: 32px; height: 32px;"
+ alt="YouTube" title="YouTube" src="images/YT.png"></a>
+&nbsp;&nbsp;<a href="mailto:info@no28.games"><img
+ style="border: 0px solid ; width: 32px; height: 32px;"
+ alt="mail" title="mail" src="images/Mail.png"></a>
+&nbsp;&nbsp;<a href="www.sakarigames.com/press"><img
+ style="border: 0px solid ; width: 32px; height: 32px;"
+ alt="Press" title="Press" src="images/About.png"></a><br>
+<br>
+<small><small><small><small><small><br>
+</small></small></small><span
+ style="color: silver;">all right reserved No. 28 Games 2017</span><small><br>
+<br>
+</small></small></small><small><small><small><small><small><small><img
+ style="width: 115px; height: 48px;" alt="Logo"
+ src="images/No28GamesLogo.png"></small></small></small></small></small></small></div>
+
+
 
 <script>
 
