--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ ON</span></big></big></small></small></small><br>
 &nbsp;&nbsp;<a href="mailto:info@no28.games"><img
  style="border: 0px solid ; width: 32px; height: 32px;"
  alt="mail" title="mail" src="images/Mail.png"></a>
-&nbsp;&nbsp;<a href="www.sakarigames.com/press"><img
+&nbsp;&nbsp;<a href="http://www.sakarigames.com/press"><img
  style="border: 0px solid ; width: 32px; height: 32px;"
  alt="Press" title="Press" src="images/About.png"></a><br>
 <br>
